Update /admin/register-professor (#38)
* generate password reset token

generate password reset token and return it also updated the openapi.yaml

* quick transactional fix for the resetPassword

added transactional so if one or the other write operations fail the database is rolled back
